# multi_modal_transformers_TokenMerge

./: .gitignore  README.md  models.py  multi_modal_transformer.py  pointcloud_transformer.py  pyproject.toml  test_multi_modal_transformer.py  transformer_components.py
attention/: offset_attention.py
config/: logging.yaml
memory_augmented_transformers/: README.md  attention.py  mat.py
model_configs/: point_cloud_transformer.yaml
multi_modal_transformers/: README.md  concept_learner.py  multi_modal_transformer.py  test_point_cloud_tokenizer.py  transformer_components.py  vision_langauge_model.py  vision_language_model.py  visual_concept_planner.py
multi_modal_transformers/action_heads/: categorical.py  continuous.py  diffusion.py
multi_modal_transformers/attention_blocks/: attention.py  compressed_attention.py  tome_attention.py
multi_modal_transformers/model_configs/: concept_learner_v1.yaml  octo_base.yaml
multi_modal_transformers/model_configs/action_heads/: diffusion.yaml
multi_modal_transformers/model_configs/attention_blocks/: vanilla_decoder.yaml
multi_modal_transformers/model_configs/tokenizers/image_tokenizer/: gato_resnet.yaml
multi_modal_transformers/model_configs/tokenizers/images/: gato_resnet.yaml
multi_modal_transformers/model_configs/tokenizers/text/: t5_base.yaml
multi_modal_transformers/models/octo/: __init__.py  octo.py
multi_modal_transformers/models/visual_concept_planner/: concept_learner.py
multi_modal_transformers/tests/: test_concept_learner.py
multi_modal_transformers/tokenizers/: README.md  image_tokenizer.py  text_tokenizer.py  token_compression.py  token_sequencer.py  tome.py  value_tokenizer.py
multi_modal_transformers/tokenizers/images/: image_tokenizer.py
multi_modal_transformers/tokenizers/numeric_values/: value_tokenizer.py
multi_modal_transformers/tokenizers/readout/: readout.py
multi_modal_transformers/tokenizers/tests/: test_image_tokenizer.py
multi_modal_transformers/tokenizers/text/: t5_base.py  text_tokenizer.py
tokenizers/: README.md  image_language_tokenizer.py  image_tokenizer.py  point_cloud_tokenizer.py  tensor_tokenizer.py  test_image_tokenizer.py  text_tokenizer.py  value_tokenizer.py
tokenizers/utils/: logger.py
transformers/: README.md  decision_transformer.py  layers.py
utils/: logger.py
(+2 files in other folders)
